# readme_check

./: .gitignore  README.md  check.bat  check.ps1  check.py  checker.py  compile.ps1  config.py  requirements.txt
readme_check/: README.md  pyproject.toml
readme_check/src/: readme_check.py
readme_check/src/readme_check.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
