[project]
name = "readme_check"
version = "0.1.2"
authors = [
  { name="Vishnu Venkatesh", email="vishnuchidambaranvenkatesh@gmail.com" },
]
description = "Used to check readme"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama==0.4.6",
]